--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -1,48 +1,56 @@
 /* Estilos gerais */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Roboto', sans-serif;
+    background-color: #e0e0e0;
     color: #333;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center; /* Centraliza verticalmente */
     height: 100vh;
     overflow-x: hidden;
+    text-align: center; /* Centraliza o texto */
 }
 
 h1 {
+    font-size: 2rem;
     margin: 1.25rem 0;
+    color: #3f51b5;
 }
 
 /* Container para os formulários e QR codes */
-form, #qr-code-container {
-    width: 80%;
-    max-width: 37.5rem;
+form, .message-container {
+    width: 90%;
+    max-width: 25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #ffffff;
+    padding: 2rem;
+    border-radius: 0.625rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 1.25rem;
 }
 
 button {
-    padding: .625rem 1.25rem;
-    margin: .625rem;
+    padding: 0.75rem 1.5rem;
+    margin: 0.75rem 0;
     border: none;
-    background: #007bff;
+    background: #3f51b5;
     color: #fff;
-    border-radius: .3125rem;
+    border-radius: 0.3125rem;
     cursor: pointer;
     transition: background-color 0.3s;
     width: 100%;
     max-width: 25rem;
     text-align: center;
+    font-size: 1rem;
 }
 
 button:hover {
-    background: #0056b3;
+    background: #303f9f;
 }
 
 /* Container para QR codes */
@@ -55,7 +63,7 @@ button:hover {
 }
 
 #qr-code-container img {
-    margin: .625rem;
+    margin: 0.625rem;
 }
 
 ul {
@@ -66,21 +74,26 @@ ul {
 ul li {
     display: flex;
     justify-content: center;
-    margin: .625rem 0;
-    border: #333;
-    border-style: outset;
-    padding:.8rem;
-    width:100%;
-    border-radius: .3rem;
+    margin: 0.625rem 0;
+    border: 1px solid #333;
+    padding: 0.8rem;
+    width: 100%;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-ul li:hover{
-    color:#0056b3
+ul li:hover {
+    background-color: #f0f0f0;
+    color: #3f51b5;
 }
 
 /*INPUT SENHA OWNER*/
-/* CSS */
 .login-form {
+    width: 100%;
+    max-width: 25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -89,32 +102,31 @@ ul li:hover{
 }
 
 .password-input {
-    padding: .625rem;
-    margin-bottom: .625rem;
+    padding: 0.75rem;
+    margin-bottom: 0.75rem;
     width: 100%;
-    max-width: 18.75rem;
-    border: .0625rem solid #ccc;
-    border-radius: .3125rem;
+    border: 0.0625rem solid #ccc;
+    border-radius: 0.3125rem;
     font-size: 1rem;
-    box-sizing: border-box; /* Garante que o padding não aumente o tamanho total */
+    box-sizing: border-box;
     outline: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .login-button {
-    padding: .625rem 1.25rem;
-    margin: .625rem;
+    padding: 0.75rem 1.5rem;
     width: 100%;
-    max-width: 18.75rem;
     border: none;
-    background-color: #007bff;
+    background-color: #3f51b5;
     color: #fff;
-    border-radius: .3125rem;
+    border-radius: 0.3125rem;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 1rem;
 }
 
 .login-button:hover {
-    background-color: #0056b3;
+    background-color: #303f9f;
 }
 
 /* Modal de confirmação */
@@ -138,7 +150,7 @@ ul li:hover{
 #modal-content, #countdown-content {
     background: #fff;
     padding: 1.25rem;
-    border-radius: .3125rem;
+    border-radius: 0.3125rem;
     text-align: center;
     position: relative;
     width: 80%;
@@ -149,35 +161,37 @@ ul li:hover{
     position: sticky;
     top: 0;
     background-color: #f4f4f4;
-    padding: .625rem 0;
+    padding: 0.625rem 0;
     width: 100%;
-    max-width: 37.5rem;
+    max-width: 25rem;
     display: flex;
     align-items: center;
-    z-index: 100;
+    margin-top: 1.25rem;
 }
 
 #search-input {
     flex: 1;
-    padding: .625rem;
+    padding: 0.75rem;
     font-size: 1rem;
-    border: .0625rem solid #ddd;
-    border-radius: .3125rem 0 0 .3125rem;
+    border: 0.0625rem solid #ddd;
+    border-radius: 0.3125rem 0 0 0.3125rem;
     outline: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #search-button {
-    padding: .625rem 1.25rem;
-    background-color: #007bff;
+    padding: 0.75rem 1.5rem;
+    background-color: #3f51b5;
     color: #fff;
     border: none;
-    border-radius: 0 .3125rem .3125rem 0;
+    border-radius: 0 0.3125rem 0.3125rem 0;
     cursor: pointer;
     transition: background-color 0.3s;
+    margin-left: 0.125rem;
 }
 
 #search-button:hover {
-    background-color: #0056b3;
+    background-color: #303f9f;
 }
 
 #countdown-container {
@@ -218,4 +232,85 @@ ul li:hover{
 
 #countdown-progress .progress-bar.red {
     stroke: #dc3545;
+}
+
+/* Container para mensagem de QR Code inválido */
+.message-container {
+    width: 80%;
+    max-width: 25rem;
+    background-color: #fff;
+    padding: 1.25rem;
+    border-radius: 0.3125rem;
+    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 1.25rem;
+}
+
+.message-container p {
+    margin-bottom: 1.25rem;
+}
+
+/* Estilo do botão */
+.button {
+    display: inline-block;
+    padding: 0.75rem 1.5rem;
+    margin: 0.75rem;
+    border: none;
+    background: #3f51b5;
+    color: #fff;
+    border-radius: 0.3125rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-decoration: none;
+}
+
+.button:hover {
+    background: #303f9f;
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+    body {
+        padding: 0 1rem;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    form, #qr-code-container, .message-container, #search-container {
+        width: 100%;
+        padding: 1rem;
+        box-shadow: none;
+    }
+
+    button {
+        padding: 0.625rem 1.25rem;
+        font-size: 0.875rem;
+    }
+
+    .password-input {
+        padding: 0.625rem;
+        font-size: 0.875rem;
+    }
+
+    .login-button {
+        padding: 0.625rem 1.25rem;
+        font-size: 0.875rem;
+    }
+
+    ul li {
+        padding: 0.625rem;
+        font-size: 0.875rem;
+    }
+
+    #search-input {
+        padding: 0.625rem;
+        font-size: 0.875rem;
+    }
+
+    #search-button {
+        padding: 0.625rem 1.25rem;
+        font-size: 0.875rem;
+    }
 }
